# pypi-simple-cli

./: README.md  pyproject.toml
.github/workflows/: pytest.yaml  release.yml
src/pypi_simple_cli/: __main__.py  cli.py
tests/: test_cli.py
tests/data/: fake_page.html
