[project]
name = "pypi-simple-wrapper"
dynamic = ["version"]
description = "PyPI Simple Repository API client library wrapper"
readme = "README.md"
requires-python = ">=3.7"
license = "Apache2"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "Qiao Qiao", email = "qiaozha@gmail.com" }
]

keywords = [
    "pypi",
    "pep503",
    "simple repository api",
    "packages",
    "pip",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
    "Topic :: Text Processing :: Markup :: HTML",
    "Typing :: Typed",
]

dependencies = [
    "pypi-simple",
]

[project.urls]
"Source Code" = "https://github.com/asurinsaka/pypi-simple-wrapper
"Bug Tracker" = "https://github.com/asurinsaka/pypi-simple-wrapper/issues"

